--- a/css/batavilmoslionel.css
+++ b/css/batavilmoslionel.css
@@ -3,3 +3,8 @@ body{
     font-size: 16px;
     font-family: 'Times New Roman', Times, serif;
 }
+
+.morty{
+    display: flex;
+    align-items: center;
+}
